--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,35 +1,32 @@
-.footer-container {
-    width: 100%;
-    max-width: 2000px;
+.footer{
     border-top: 2px solid #e8e8e8;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 15px;
     font-size: 0.9rem;
+    min-height: 0;
 }
 
-.footer {
+.footer__info {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 80%;
 }
 
-.footer-socials{
+.footer__socials{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.footer-socials-icon-container{
+.footer__socials div{
     display: flex;
     flex-direction: row;
 }
 
-.footer-social-icons{
+.footer__socialIcon{
     height: 70px;
     width: 70px;
     margin-left: 5px;
@@ -37,27 +34,27 @@
 }
 
 
-.footer-contact {
+.footer__contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.footer-contact-icons {
+.footer__contactIcon {
     height: 25px;
     width: 25px;
     margin-right: 7px;
 }
 
-.footer-contact span {
+.footer__contact span {
     display: flex;
     align-items: center;
     width: 100%;
     margin-bottom: 10px;
 
 }
-.footer-author{
+.footer__author{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,12 +64,12 @@
 }
 
 @media(max-width: 900px) {
-    .footer-container{
+    .footer{
         font-size: 0.7rem;
     }
 }
 @media(max-width: 700px) {    
-    .footer {
+    .footer__info {
         flex-direction: column;
         align-items: center;
     }
