--- a/frontend/src/components/userComponents/Cart.css
+++ b/frontend/src/components/userComponents/Cart.css
@@ -1,26 +1,26 @@
-.mycart-container{
-    max-width: 2000px;
-    width: 100%;
-    display: flex;
+
+.cart{
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
-    min-height: 400px;
     font-size: 0.8rem;
 }
+.cart--noProducts{
+    justify-content: center;
+}
 
-.mycart-cart{
+.cart__content{
     width: 60%;
 }
 
-.mycart-cart-title{
+.cart__header{
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     justify-content: space-between;
 }
 
-.mycart-cart-deleteAll{
+.cart__deleteAll{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -29,12 +29,18 @@
     width: 200px;
     height: 40px;
 }
-.mycart-cart-deleteAll:hover{
+.cart__deleteAll:hover{
     border: 2px solid #e8e8e8;
     border-radius: 10px;
     background-color: #f5f5f5;
 }
-.mycart-product{
+.cart__deleteAll img{
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+}
+
+.cart__product{
     max-width: 1500px;
     display: flex;
     flex-direction: row;
@@ -45,7 +51,7 @@
     height: 100px;
     margin-bottom: 30px;
 }
-.mycart-product-link{
+.cart__product a{
     max-width: 1500px;
     display: flex;
     flex-direction: row;
@@ -54,7 +60,7 @@
     text-decoration: none;
 }
 
-.cart-img-container{
+.cart__productImg{
     height: 100px;
     width: 100px;
     display: flex;
@@ -62,11 +68,11 @@
     align-items: center;
     justify-content: center;
 }
-.cart-img{
+.cart__productImg img{
     max-height: 100px;
     max-width: 100px;
 }
-.mycart-price-label{
+.cart__priceAmount{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -74,24 +80,28 @@
     margin-right: 50px;
 }
 
-.mycart-price-changeAmount{
+.cart__changeAmount{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
     margin-left: 20px;
     width: 150px;
 }
-.mycart-price-changeAmount label{
+.cart__changeAmount span{
     display: flex;
     justify-content: center;
     width: 60px;
 }
 
-.mycart-cart-icon{
+
+.cart__icon{
     width: 20px;
     height: 20px;
+    margin-left: 10px;
 }
-.mycart-summary{
+
+.cart__summary{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -102,20 +112,14 @@
     border-radius: 10px;
 }
 
-.mycart-summary span{
+.cart__summary span{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.mycart-summary label{
-    background-color: darkgrey;
-    display: flex;
-    flex-direction: row;
-    justify-content: center
-}
 
-.mycart-summary-button{
+.cart__summary a{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,42 +134,50 @@
     border: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1280px) {
 
-    .mycart-container{
+    .cart{
         flex-direction: column;
         justify-content: center;
         align-items: center;
         font-size: 0.7rem;
     }
-    .mycart-cart{
+    .cart__content{
         width: 100%;
     }
-    .mycart-product{
+    .cart__product{
         justify-content: space-between;
     }
-    .mycart-summary{
+    .cart__summary{
         width: 100%;
     }
-    .mycart-price-label{
+    .cart__priceAmount{
         margin-right: 5px;
     }
-    .mycart-price-changeAmount{
-        margin-left: 0px;
+    .cart__changeAmount{
+        margin-left: 0;
         width:100px;
     }
+    .cart__icon{
+        width: 15px;
+        height: 15px;
+    }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
 
-    .mycart-container{
+    .cart{
         font-size: 0.6rem;
     }
-    .cart-img-container{
+    .cart__productImg{
         height: 60px;
         width: 60px;
     }
-    .cart-img{
+    .cart__productImg img{
         max-height: 60px;
         max-width: 60px;
     }
+    .cart__changeAmount span{
+        width: 50px;
+    }
+
 }
