--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,7 +35,7 @@ ul {
 }
 
 
-.page-content{
+.content{
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@ ul {
 
 
 @media (max-width: 1100px) {
-  .page-content{
+  .content{
     font-size: 0.8rem;
   }
   #root{
@@ -60,7 +60,7 @@ ul {
     margin-left:10px;
     margin-right: 10px;
   }
-  .page-content{
+  .content{
     font-size: 0.7rem;
   }
 }
@@ -70,7 +70,7 @@ ul {
     margin-left:10px;
     margin-right: 10px;
   }
-  .page-content{
+  .content{
     font-size: 0.5rem;
   }
 }
