--- a/frontend/src/components/loginComponents/Register.css
+++ b/frontend/src/components/loginComponents/Register.css
@@ -1,6 +1,6 @@
 @import url("../variable.css");
 
-.register-container-complete{
+.registerComplete{
     display: flex;
     flex-direction: column;
     align-items: center;
