--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,19 @@ ul {
   font-size: 1rem;
 }
 
+.loading{
+  width: 100%;
+  max-width: var(--max-width);
+  min-height: var(--min-height);
+  display: flex;
+  justify-content: center;
+}
+.loading img{
+  width: 10%;
+  height: 10%;
+  margin-top: 100px;
+}
+
 
 @media (max-width: 1100px) {
   .content{
